# ubuntu-static-reports-operator

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TODO.txt  charmcraft.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  spread.yaml
.github/: .copilot-collections.yaml
.github/instructions/: testing.instructions.md
.github/workflows/: build-and-test.yaml  copilot-collections-update.yml  promote.yml  publish.yml
app/config/: update-packageset-report.service.j2
lib/charms/operator_libs_linux/v0/: apt.py
src/: charm.py  staticreports.py  transition.py
src/nginx/: staticreports.conf
src/script/: germinate-ubuntu  seeded-in-ubuntu-indexer  sru-report  update-archive-mirror  update-bugpatterns  update-germinate  update-mismatches  update-nbs  update-seeds  update-sync-blocklist
src/systemd/: package-subscribers.service  package-subscribers.timer  packageset-report.service  packageset-report.timer  permissions-report.service  permissions-report.timer  sru-report.service  sru-report.timer  update-archive-mirror.service  update-archive-mirror.timer  update-bugpatterns.service  update-bugpatterns.timer  update-germinate.service  update-mismatches.service  update-nbs.service  update-seeds.service  update-seeds.timer  update-sync-blocklist.service  update-sync-blocklist.timer
tests/integration/: __init__.py  conftest.py  test_charm.py  test_ingress.py
tests/spread/integration/deploy-charm/: task.yaml
tests/spread/integration/ingress/: task.yaml
tests/unit/: test_charm.py  test_staticreports.py
(+1 files in other folders)
