[project]
name = "ubuntu-static-reports-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "charmlibs-apt~=1.0",
    "charmlibs-pathops~=1.3.0.post0",
    "ops~=3.7",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ops[testing]",
    "coverage[toml]",
    "pytest",
    "requests",
    "jubilant",
    "ruff",
    "ty",
    "urllib3>=2.7.0",
]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = [".", "lib", "src"]

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]

[tool.ty.environment]
# Resolve the charm's first-party modules (src/) and bundled charm libs (lib/).
extra-paths = ["lib", "src"]
